--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -16,6 +16,13 @@ body{
     height: 100%;
 }
 div.main{
+    background-color: #f7f7f7;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     display: inline-block;
     vertical-align: middle;
 }
@@ -30,6 +37,8 @@ input.but{
     width: 270px;
     height: 45px;
     margin: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
     vertical-align: middle;
     color:#fff;
     border: 1px solid #3079ed;
@@ -55,6 +64,13 @@ input.but:hover{
     background-image: linear-gradient(top,#4d90fe,#357ae8);
 }
 input.but:active{
-    box-shadow: inset 0 0 2px 0 black;
+    box-shadow: inset 0 0 2px 0 rgba(0,0,0,0.8);
     
 }
+/*
+div.main:first-child{
+    margin-top: 100px; 
+}
+div.main:last-child{
+    margin-bottom: 100px; 
+}*/
