--- a/styles/theader.css
+++ b/styles/theader.css
@@ -1,14 +1,4 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Feb 8, 2014, 1:22:53 PM
-    Author     : toker
-*/
-
-div{
+div.head{
     margin:auto;
     margin-bottom: 50px;
     margin-top: 20px;
@@ -17,4 +7,10 @@ div{
 }
 div > a{
     word-spacing: normal;
+}
+div.content{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    text-align: justify;
 }
