--- a/styles/theader.css
+++ b/styles/theader.css
@@ -14,3 +14,7 @@ div.content{
     padding: 10px;
     text-align: justify;
 }
+.footer > span {
+    background-color: #24323B;
+    color: #fff;
+}
