--- a/styles/theader.css
+++ b/styles/theader.css
@@ -22,4 +22,46 @@ div.content{
     background-color: #24323B;
     color: #fff;
 }
+table{
+    border-collapse: collapse;
+    box-sizing: border-box;
+    width:1000px;
+    margin:auto;
 
+}
+td{
+    text-align: center;
+    border:0;
+    padding-left:4px;
+    padding-right:4px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-size: 10pt;
+    font-weight: 900;
+    color: #fff;
+    font-family: "Arial", "sans-serif";
+}
+tr{
+    padding-left:6px;
+    padding-right:6px;
+    background-color: rgb(172,0,20);
+}
+#d{
+    color:rgb(172,0,20);
+    background-color: #fff;
+}
+#s{
+    background-image: -webkit-linear-gradient(left,rgb(172,0,20),rgb(248,72,49));
+    background-image: -moz-linear-gradient(top,rgb(172,0,20),rgb(248,72,49));
+    background-image: -ms-linear-gradient(top,rgb(172,0,20),rgb(248,72,49));
+    background-image: -o-linear-gradient(top,rgb(172,0,20),rgb(248,72,49));
+    background-image: linear-gradient(top,rgb(172,0,20),rgb(248,72,49));
+    /*background-color: rgb(248,72,49);*/
+}
+#t{
+    background-image: -webkit-linear-gradient(left,rgb(248,72,49),rgb(172,0,20));
+    background-image: -moz-linear-gradient(top,rgb(248,72,49),rgb(172,0,20));
+    background-image: -ms-linear-gradient(top,rgb(248,72,49),rgb(172,0,20));
+    background-image: -o-linear-gradient(top,rgb(248,72,49),rgb(172,0,20));
+    background-image: linear-gradient(top,rgb(248,72,49),rgb(172,0,20));
+}
