--- a/styles/theader.css
+++ b/styles/theader.css
@@ -52,16 +52,15 @@ tr{
 }
 #s{
     background-image: -webkit-linear-gradient(left,rgb(172,0,20),rgb(248,72,49));
-    background-image: -moz-linear-gradient(top,rgb(172,0,20),rgb(248,72,49));
-    background-image: -ms-linear-gradient(top,rgb(172,0,20),rgb(248,72,49));
-    background-image: -o-linear-gradient(top,rgb(172,0,20),rgb(248,72,49));
-    background-image: linear-gradient(top,rgb(172,0,20),rgb(248,72,49));
-    /*background-color: rgb(248,72,49);*/
+    background-image: -moz-linear-gradient(left,rgb(172,0,20),rgb(248,72,49));
+    background-image: -ms-linear-gradient(left,rgb(172,0,20),rgb(248,72,49));
+    background-image: -o-linear-gradient(left,rgb(172,0,20),rgb(248,72,49));
+    background-image: linear-gradient(left,rgb(172,0,20),rgb(248,72,49));
 }
 #t{
     background-image: -webkit-linear-gradient(left,rgb(248,72,49),rgb(172,0,20));
-    background-image: -moz-linear-gradient(top,rgb(248,72,49),rgb(172,0,20));
-    background-image: -ms-linear-gradient(top,rgb(248,72,49),rgb(172,0,20));
-    background-image: -o-linear-gradient(top,rgb(248,72,49),rgb(172,0,20));
-    background-image: linear-gradient(top,rgb(248,72,49),rgb(172,0,20));
+    background-image: -moz-linear-gradient(left,rgb(248,72,49),rgb(172,0,20));
+    background-image: -ms-linear-gradient(left,rgb(248,72,49),rgb(172,0,20));
+    background-image: -o-linear-gradient(left,rgb(248,72,49),rgb(172,0,20));
+    background-image: linear-gradient(left,rgb(248,72,49),rgb(172,0,20));
 }
