--- a/styles/theader.css
+++ b/styles/theader.css
@@ -9,6 +9,7 @@ div > a{
     word-spacing: normal; 
 }
 div.content{
+    word-break: break-all;
     overflow-wrap: break-word;
     width: 100%;
     height: 100%;
